zeit.content.article changes
============================

1.4 (unreleased)
----------------

1.3 (2008-06-23)
----------------

- Tests auf zeit.cms 0.9.22 angepasst.

1.2 (2008-06-16)
----------------

- Asset-View refaktoriert: Verwenden des Asset-Supports aus dem Core.
- "Kommentare zusammenfassen" (bug #3734).

1.1 (2008-05-29)
----------------

- Compatible with zeit.cms 0.9.16


1.0 (2008-05-26)
----------------

- Removed special "syndicated in" which is done via relations now.
- Removed special syndication log, which will be done via zeit.objectlog.

0.9.14 (2008-05-20)
-------------------

- first release after moving article out of zeit.cms core