@@ -4,6 +4,8 @@ zeit.content.article changes
 1.4 (unreleased)
 ----------------
 
+- DailyNL in den Standard-Metadaten (bug #4307).
+
 1.3 (2008-06-23)
 ----------------
 
